# ATOM-Engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
Audio/: Audio.cpp  CMakeLists.txt
Core/: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  GameApp.cpp  GameApp.h  GameObject.cpp  GameObject.h  GameWindow.cpp  GameWindow.h  MathUtils.h  Scene.h  Timer.h
Core/Examples/: CMakeLists.txt  ExampleAudio.cpp  ExampleGameApp.cpp
Core/Lib/: Audio.cpp  Audio.h  GameApp.cpp  GameApp.h  GameWindow.cpp  GameWindow.h  Platform.h  Scene.cpp  Scene.h  Timer.h  Types.h
Examples/: CMakeLists.txt  ExampleGameApp.cpp
Examples/Pong/: Ball.cpp  Ball.h  CMakeLists.txt  main.cpp
GUI/: CMakeLists.txt  Font.cpp  Font.h  Text.cpp  Text.h  stb_truetype.cpp
Graphics/: CMakeLists.txt  Context.cpp  Context.h  Shader.cpp  Shader.h
Shared/: IO.cpp  IO.h  MathUtils.h  Platform.h  Types.h
